--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>SLCC HTML Example</h1>
+
+    <form>
+        <label>Enter your name:</label>
+        <input type="text" id="name" name="name">
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
