--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <label>Enter your name:</label>
         <input type="text" id="name" name="name">
         <input type="submit" value="Submit">
+
+        <label>Enter your email:</label>
+        <input type="email" id="email" name="email">
+
     </form>
 </body>
 </html>
