--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
 </head>
 <body>
     <h1>SLCC HTML Example</h1>
@@ -11,7 +11,7 @@
     <form>
         <label>Enter your name:</label>
         <input type="text" id="name" name="name">
-        <input type="submit" value="Submit">
+        
     </form>
 </body>
 </html>
