Fixed the typo with a paragraph instead of a comment

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <label>Enter your email:</label>
         <input type="email" id="email" name="email">
-        <p>Fixed the conflicted</p>
+        <!--Conflict Resolved-->
 
     </form>
 </body>
